@@ -1,6 +1,6 @@
 /*
- * Copyright (C) 2020 Linux Studio Plugins Project <https://lsp-plug.in/>
- *           (C) 2020 Vladimir Sadovnikov <sadko4u@gmail.com>
+ * Copyright (C) 2024 Linux Studio Plugins Project <https://lsp-plug.in/>
+ *           (C) 2024 Vladimir Sadovnikov <sadko4u@gmail.com>
  *
  * This file is part of lsp-tk-lib
  * Created on: 3 авг. 2017 г.
@@ -72,10 +72,6 @@ namespace lsp
         {
             public:
                 static const w_class_t    metadata;
-
-            private:
-                ScrollBar & operator = (const ScrollBar &);
-                ScrollBar(const ScrollBar &);
 
             protected:
                 enum flags_t
@@ -162,16 +158,21 @@ namespace lsp
                 static status_t                 timer_handler(ws::timestamp_t sched, ws::timestamp_t time, void *arg);
 
             protected:
-                virtual void                    size_request(ws::size_limit_t *r);
-                virtual void                    property_changed(Property *prop);
-                virtual void                    realize(const ws::rectangle_t *r);
+                virtual void                    size_request(ws::size_limit_t *r) override;
+                virtual void                    property_changed(Property *prop) override;
+                virtual void                    realize(const ws::rectangle_t *r) override;
 
             public:
                 explicit ScrollBar(Display *dpy);
-                virtual ~ScrollBar();
+                ScrollBar(const ScrollBar &) = delete;
+                ScrollBar(ScrollBar &&) = delete;
+                virtual ~ScrollBar() override;
 
-                virtual status_t                init();
-                virtual void                    destroy();
+                ScrollBar & operator = (const ScrollBar &) = delete;
+                ScrollBar & operator = (ScrollBar &&) = delete;
+
+                virtual status_t                init() override;
+                virtual void                    destroy() override;
 
             public:
                 LSP_TK_PROPERTY(RangeFloat,         value,                  &sValue)
