@@ -38,7 +38,6 @@ namespace lsp
                 sSGroups.bind("stereo_groups", this);
                 sTextVisible.bind("text.visible", this);
                 sHeaderVisible.bind("header.visible", this);
-                sPassEvents.bind("events.pass", this);
                 sColor.bind("color", this);
                 sMinChannelWidth.bind("channel.width.min", this);
                 // Configure
@@ -49,7 +48,6 @@ namespace lsp
                 sSGroups.set(true);
                 sTextVisible.set(false);
                 sHeaderVisible.set(false);
-                sPassEvents.set(true);
                 sColor.set("#000000");
                 sMinChannelWidth.set(16);
                 // Override
@@ -72,7 +70,6 @@ namespace lsp
             sSGroups(&sProperties),
             sTextVisible(&sProperties),
             sHeaderVisible(&sProperties),
-            sPassEvents(&sProperties),
             sColor(&sProperties),
             sMinChannelWidth(&sProperties)
         {
@@ -133,7 +130,6 @@ namespace lsp
             sSGroups.bind("stereo_groups", &sStyle);
             sTextVisible.bind("text.visible", &sStyle);
             sHeaderVisible.bind("header.visible", &sStyle);
-            sPassEvents.bind("events.pass", &sStyle);
             sColor.bind("color", &sStyle);
             sMinChannelWidth.bind("channel.width.min", &sStyle);
 
@@ -685,9 +681,6 @@ namespace lsp
 
         Widget *LedMeter::find_widget(ssize_t x, ssize_t y)
         {
-            if (!sPassEvents.get())
-                return NULL;
-
             // Update coordinates
             x -= sSize.nLeft;
             y -= sSize.nTop;
