@@ -5,6 +5,7 @@
 === 1.0.23 ===
 * Added header support by tk::LedMeterChannel.
 * Added header support by tk::LedMeter.
+* Implemented SLOT_MOUSE_POINTER slot for overriding mouse pointer.
 * Updated build scripts.
 
 === 1.0.22 ===
